# fwh_groupphoto

./: .gitignore  README.md  pyproject.toml
src/groupphoto/: __init__.py
src/groupphoto/ffl/: groupphoto.ffl
src/groupphoto/handlers/: __init__.py
src/groupphoto/handlers/enhance/: enhance_handlers.py
src/groupphoto/handlers/ingest/: ingest_handlers.py
src/groupphoto/handlers/shared/: groupphoto_utils.py
src/groupphoto/tools/: batch-group.sh  batch_group.py  convert_photos.py  copy_tree.py  enhance-group.sh  enhance_group.py  nef_to_tif.py  replace-bg.sh  replace_bg.py  tiffs_to_jpegs.py
src/groupphoto/tools/_groupphoto_tools/: __init__.py  background.py  copytree.py  deblur.py  detect.py  enhance.py  glare.py  groupphoto_mocks.py  images.py  pipeline.py  quality.py  segment.py  sidecar.py  storage.py
tests/: conftest.py  test_background.py  test_copytree.py  test_deblur.py  test_ffl_domain.py  test_glare.py  test_pipeline_mock.py  test_tiffs_to_jpegs.py
