[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fwh-groupphoto"
version = "0.1.0"
description = "Enhance posed group-gathering photos: deblur + glare/highlight correction + optional background replacement."
requires-python = ">=3.11"
# Core deps are light — the pipeline runs (degraded) without the ML extras.
dependencies = [
    "pillow>=10.0",
    "numpy>=1.24",
    "opencv-python>=4.8",   # CLAHE, DCP dehaze, gaussian blur, composite (16-bit)
    "tifffile>=2023.7",     # lossless 16-bit TIFF output
    "pillow-heif>=0.13",    # decode iPhone .heic/.heif photos
]

[project.optional-dependencies]
# Person detection (exposure metering + headcount). Ultralytics pulls torch.
detect = ["ultralytics>=8.1"]
# Face restoration (the main deblur lever). Same spandrel/gfpgan stack as fwh_peloton.
enhance = ["spandrel>=0.3", "spandrel_extra_arches>=0.2", "gfpgan>=1.3"]
# Background matting (BiRefNet/isnet via rembg → onnxruntime).
matte = ["rembg>=2.0", "onnxruntime>=1.16"]
raw = ["rawpy>=0.19"]       # decode camera RAW (.nef/.cr2/.arw/.dng/…) + highlight recovery
s3 = ["boto3>=1.28"]
inpaint = ["iopaint>=1.3"]  # phase 2: LaMa inpaint (blown windows / speculars)
ai = ["diffusers>=0.27", "transformers>=4.40"]  # phase 3: AI-generated backgrounds
test = ["pytest>=7.4"]

# FFL-workflow layer: install '.[domain]' to run groupphoto as a Facetwork workflow.
# The tools/library install fine without it.
domain = ["facetwork>=0.31.0"]

[project.entry-points."facetwork.domains"]
groupphoto = "groupphoto:domain"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
groupphoto = ["ffl/*.ffl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
